[package]
name = "generator-light"
version = "0.1.1"
edition = "2024"
description = "Light stackless generators based on Futures"
license = "MIT"
authors = ["Dmitry Sviridkin @Nekrolm"]
repository = "https://github.com/Nekrolm/generator-light"

[dependencies]



[dev-dependencies]
criterion = "0.8"


[[bench]]
name = "counter"
harness = false