[package]
name = "generator-light"
version = "0.2.0"
edition = "2024"
description = "Light stackless generators based on Futures"
license = "MIT"
authors = ["Dmitry Sviridkin @Nekrolm"]
repository = "https://github.com/Nekrolm/generator-light"
categories = ["no-std"]
keywords = ["no-std", "generator"]

[dependencies]
either = { version = "1", default-features = false}

[dev-dependencies]
criterion = "0.8"
genawaiter = "0.99"


[[bench]]
name = "counter"
harness = false

[features]
default = ["std"]
std = []